Fix logs spacing

--- a/app/styles/_lists.scss
+++ b/app/styles/_lists.scss
@@ -19,10 +19,6 @@
   }
 }
 
-.logs__item {
-  margin-bottom: .5em;
-}
-
 .logs__item--date {
   color: $light-grey;
 }
