--- a/app/styles/settings/_variables.scss
+++ b/app/styles/settings/_variables.scss
@@ -34,4 +34,4 @@ $base-line-height: 1.5;
 
 $code-font-family: 'Inconsolata', monospace;
 $code-font-size: 1rem;
-$code-line-height: 0.9;
+$code-line-height: 1;
